deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default   # 👈 مهم
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
